# vinlab

./: CMakeLists.txt  README.md  configuration.md  package.xml  parameter_reference.md
config/: bspline.rviz  bspline_config.yaml  example_config.yaml  example_config_01.yaml  example_scene_01.yaml  example_scene_02.yaml  scene_viewer.yaml  valid_keys.yaml  vinlab.rviz
src/: array_utils.py  bspline_controller.py  bspline_core.py  bspline_node.py  cam_simulator_node.cpp  color_helper.py  config_utils.py  feature.py  features.py  geometry_utils.py  motion_utils.py  path_eval_node.cpp  ros_message_helper.py  rosbag_imu_editor.py  rotation_trajectory.py  row_vector_array.py  scene.py  scene_viewer.py  sensor_measurements.py  sensor_platform.py  static_frame.py  trajectory.py  trajectory_eval.py  trajectory_group.py  trajectory_player.py  translation_trajectory.py
